# Lux-AI-Season-2

./: .gitignore  .gitmodules  README.md  debug.py  download_replay.sh  how-to-model-policy.md  invalid-action-masking.md  preprocess.py  process_input.ipynb  pyproject.toml  state.md  tutorial.ipynb  utils.py
.devcontainer/: Dockerfile  devcontainer.json
new_src/: README.md  action_enum.py  agent.py  main.py  playground.ipynb  replay.html  submit.sh  tutorial.ipynb
new_src/lux/: cargo.py  config.py  factory.py  forward_sim.py  kit.py  pathfinding.py  states.py  team.py  unit.py  utils.py  water_costs.py
src/: agent.py  constants.py  debug.py  env_size.ipynb  models.py  ppo.py  preprocess.py  process_input.ipynb  space.py  test_replay.py  train.ipynb  tutorial.ipynb  utils.py
vec_noise-1.1.4/: PKG-INFO  setup.py
